<resources>
    <string name="app_name">RevENT</string>
    <string name="neededPermissions">To go over, the app needs the CALENDAR PERMISSION to access to the calendar Content Provider</string>
    <string name="grantPermission">Grant Now</string>
    <string name="insertEmail">Insert email address..</string>
    <string name="insertPassword">Insert password..</string>
    <string name="insertPassword2">Insert again the password..</string>
    <string name="goToLogin">"Do you already have an account? Click here and login! "</string>
    <string name="insertPasswordAgain">Insert again the password..</string>
    <string name="goToRegister">Not register? Click here to create a new account</string>
    <string name="signup">Signup</string>
    <string name="name_signup">Name..</string>
    <string name="surname_signup">Surname..</string>
    <string name="surname_profile">Surname</string>
    <string name="name_profile">Name</string>
    <string name="email_profile">Email</string>
    <string name="signout_profile">SignOut</string>
    <string name="channel_name">My Messages</string>
    <string name="channel_description">my messages</string>
</resources>