<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color_8"
    tools:context=".fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="30dp"
            android:src="@mipmap/icon_app" />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_back_white_10"
            android:layout_margin="10dp"
            android:autofillHints="Insert email address.."
            android:ems="10"
            android:hint="@string/insertEmail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_back_white_10"
            android:layout_margin="10dp"
            android:autofillHints="Insert password.."
            android:ems="10"
            android:hint="@string/insertPassword"
            android:inputType="textPassword" />
        />

        <TextView
            android:id="@+id/switchLoginToRegisterLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_back_blu_10"
            android:layout_margin="6dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/goToRegister" />

        <Button
            android:id="@+id/logButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LogIn" />
    </LinearLayout>


</FrameLayout>